--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -1,5 +1,80 @@
 {
     "menu": {
         "softName": "断面性能照査プログラム"
+    },
+    "members" :{
+        "section_sh":"断面形状",
+        "No":"番号",
+        "structure":"構造",
+        "shape":"形状",
+        "rectangle":"矩形",
+        "t_shape":"T形",
+        "r_shape":"円形",
+        "oval":"小判",
+        "m_no":"部材\n番号",
+        "m_len":"部材長",
+        "g_no":"グループNo",
+        "g_name":"部材名",
+        "section":"断面(mm)",
+        "part_n":"部材数"
+    },
+    "section-forces":{
+        "b_check":"曲げ照査",
+        "s_check":"せん断照査",
+        "t_check":"ねじり照査",
+        "p_name":"算出点名",
+        "s_len":"せん断スパン長(mm)"
+    },
+    "design-points":{
+        "p_name":"算出点名",
+        "s_len":"せん断スパン長(mm)",
+        "m_no":"部材\n番号",
+        "p_id":"算出点",
+        "position":"位置",
+        "b_check":"曲げ照査",
+        "s_check":"せん断照査",
+        "t_check":"ねじり照査",       
+        "y_around":"y軸周り",
+        "z_around":"z軸周り",
+        "y_direction":"y軸方向",
+        "z_direction":"z軸方向"
+    },
+    "bars":{
+        "m_no":"部材\n番号",
+        "position":"位置",
+        "p_name":"算出点名",
+        "crossSection":"断面\nB\nH",
+        "haunch":"ハンチ高",
+        "bending":"曲げ",
+        "shear":"せん断",
+        "rebar_ax":"軸方向鉄筋",
+        "dia":"鉄筋径",
+        "number":"本数",
+        "cover":"かぶり\n1断目",
+        "lines":"ならび\n本数",
+        "space":"アキ",
+        "ss":"間隔",
+        "rebar_la":"側方鉄筋",
+        "pieces":"本数片",
+        "rebar_sh":"せん断補強鉄筋",
+        "rebar_ob":"主鉄筋の斜率",
+        "rebar_fo":"折曲げ鉄筋",
+        "angle":"角度",
+        "process":"処理"
+    },
+    "steels":{
+        "m_no":"部材\n番号",
+        "position":"位置",
+        "p_name":"算出点名",
+        "crossSection":"断面\nB\nH",
+        "dis_above":"上からの距離",
+        "top_left":"上フランジ または 左フランジ",
+        "low_right":"下フランジ または 右フランジ",
+        "F_width":"フランジ幅",
+        "F_thickness":"フランジ厚",
+        "web":"ウェブ",
+        "w_thickness":"ウェブ厚",
+        "w_height":"ウェブ高",
+        "process":"処理"
     }
 }
