ひび割れデータ(crack-settings)、疲労データ(fatigues)完了

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,7 +43,7 @@
         "m_no":"Member\nNo",
         "position":"Position",
         "p_name":"Calculated point name",
-        "crossSection":"Section\nB\nH",
+        "bh":"Section\nB\nH",
         "haunch":"Haunch height",
         "bending":"Bending",
         "shear":"Shear",
@@ -66,7 +66,7 @@
         "m_no":"Member\nNo",
         "position":"Position",
         "p_name":"Calculated point name",
-        "crossSection":"Section\nB\nH",
+        "bh":"Section\nB\nH",
         "dis_above":"Distance from above",
         "top_left":"Top flange or left flange",
         "low_right":"Lower flange or right flange",
@@ -76,5 +76,36 @@
         "w_thickness":"Web thickness",
         "w_height":"Web height",
         "process":"Process"
+    },
+    "crack-settings":{
+        "env":"Environmental condition",
+        "normal":"Normal",
+        "cor":"Corrosive",
+        "es_cor":"Especially severe corrosiveness",
+        "m_no":"Member\nNo",
+        "position":"Position",
+        "p_name":"Calculated point name",
+        "top":"Upper side",
+        "under":"Lower side",
+        "shear":"Shear",
+        "crack":"Crack εcsd",
+        "shear_kr":"Shear kr",
+        "exterior":"Exterior"
+    },
+    "fatigues":{
+        "durable":"Durable life：",
+        "m_no":"Member\nNo",
+        "position":"Position",
+        "p_name":"Calculated point name",
+        "bh":"Section\nB\nH",
+        "for_b":"For bending",
+        "d_r2":"Double track correction r2",
+        "b_r1":"Bending r1",
+        "ax_rein":"axial reinforcement",
+        "s_grade":"Strength grade",
+        "weld":"Welded joint",
+        "for_s":"For shear",
+        "hoop":"Hoop",
+        "fold":"folding"
     }
 }
