--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
         "m_no":"部材\n番号",
         "position":"位置",
         "p_name":"算出点名",
-        "crossSection":"断面\nB\nH",
+        "bh":"断面\nB\nH",
         "haunch":"ハンチ高",
         "bending":"曲げ",
         "shear":"せん断",
@@ -66,7 +66,7 @@
         "m_no":"部材\n番号",
         "position":"位置",
         "p_name":"算出点名",
-        "crossSection":"断面\nB\nH",
+        "bh":"断面\nB\nH",
         "dis_above":"上からの距離",
         "top_left":"上フランジ または 左フランジ",
         "low_right":"下フランジ または 右フランジ",
@@ -76,5 +76,36 @@
         "w_thickness":"ウェブ厚",
         "w_height":"ウェブ高",
         "process":"処理"
+    },
+    "crack-settings":{
+        "env":"環境条件",
+        "normal":"一般",
+        "cor":"腐食性",
+        "es_cor":"とくに厳しい腐食性",
+        "m_no":"部材\n番号",
+        "position":"位置",
+        "p_name":"算出点名",
+        "top":"上側",
+        "under":"下側",
+        "shear":"せん断",
+        "crack":"ひび割 εcsd",
+        "shear_kr":"せん断\nkr",
+        "exterior":"外観"
+    },
+    "fatigues":{
+        "durable":"耐用年数：",
+        "m_no":"部材\n番号",
+        "position":"位置",
+        "p_name":"算出点名",
+        "bh":"断面\nB\nH",
+        "for_b":"曲げ用",
+        "d_r2":"複線補正 r2",
+        "b_r1":"曲げ加工 r1",
+        "ax_rein":"軸鉄筋",
+        "s_grade":"強度等級",
+        "weld":"溶接継手",
+        "for_s":"せん断用",
+        "hoop":"帯筋",
+        "fold":"折曲げ"
     }
 }
