基本データ(basic-information)、安全係数・材料強度(safety-factors-material-strengths)完了

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,15 @@
     "menu": {
         "softName": "WebDanforJS"
     },
+    "basic-information":{
+        "pick_bs":"Pick up (For bending strength)",
+        "pick_sv":"Pick up (For shear force verification)",
+        "pick_tv":"Pick up (For twist verification)",
+        "apply":"Apply",
+        "spec":"Specification",
+        "dc":"Design condition",
+        "sre_cross":"Stress used for cross-section inspection"
+    },
     "members" :{
         "section_sh":"Cross-sectional shape",
         "No":"No",
@@ -107,5 +116,40 @@
         "for_s":"For shear",
         "hoop":"Hoop",
         "fold":"folding"
+    },
+    "safety-factors-material-strengths":{
+        "rsb_con":"Reinforcing bar / Concrete",
+        "safe":"Stability factor",
+        "rsb_arr":"Reinforcing bar arrangement",
+        "rsb_ten":"Tensile reinforcement",
+        "ten_com":"Tension + Compression",
+        "all":"All-around rebar",
+        "r_mta":"Reinforcing bar material strength",
+        "c_mta":"Concrete material strength",
+        "steel":"Steel frame",
+        "s_mta":"Steel material strength",
+        "pile":"Pile construction conditions",
+        "method":"Construction method",
+        "ρc":"Construction correction factor ρc",
+        "vcd":"Design of bar members without shear reinforced steel Shear strength Vcd reduction coefficient",
+        "cs":"Compressive strength",
+        "as":"Adhesion strength",
+        "young":"Young's modulus",
+        "rebar_ax":"Axial rebar",
+        "rebar_la":"Lateral rebar",
+        "stirrup":"Stirrup",
+        "tys":"Tensile yield strength",
+        "sys":"Shear yield strength",
+        "ts":"Tensile strength",
+        "fck":"Design standard strength of concrete fck(N/mm2)",
+        "max_ca":"Maximum dimensions of coarse aggregate (mm)",
+        "b_safe":"Bending factor of safety",
+        "s_safe":"Shear factor of safety",
+        "t_safe":"Torsion factor of safety",
+        "γi":"Coefficient γi",
+        "ys":"Yield strength",
+        "d25":"D25 or less",
+        "d29":"D29 and above",
+        "dts":"Design tensile strength"
     }
 }
