--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -2,6 +2,15 @@
     "menu": {
         "softName": "断面性能照査プログラム"
     },
+    "basic-information":{
+        "pick_bs":"ピックアップ (曲げ耐力用)",
+        "pick_sv":"ピックアップ (せん断力照査用)",
+        "pick_tv":"ピックアップ (ねじり照査用)",
+        "apply":"適用",
+        "spec":"仕様",
+        "dc":"設計条件",
+        "sre_cross":"断面照査に用いる応力"
+    },
     "members" :{
         "section_sh":"断面形状",
         "No":"番号",
@@ -107,5 +116,40 @@
         "for_s":"せん断用",
         "hoop":"帯筋",
         "fold":"折曲げ"
+    },
+    "safety-factors-material-strengths":{
+        "rsb_con":"鉄筋・コンクリート",
+        "safe":"安全係数",
+        "rsb_arr":"鉄筋配置",
+        "rsb_ten":"引張鉄筋",
+        "ten_com":"引張＋圧縮",
+        "all":"全周鉄筋",
+        "r_mta":"鉄筋材料強度",
+        "c_mta":"コンクリート材料強度",
+        "steel":"鉄骨",
+        "s_mta":"鉄骨材料強度",
+        "pile":"杭の施工条件",
+        "method":"施工方法",
+        "ρc":"施工修正係数ρc",
+        "vcd":"せん断補強鋼材を用いない棒部材の設計せん断耐力Vcdの低減係数",
+        "cs":"圧縮強度",
+        "as":"付着強度",
+        "young":"ヤング係数",
+        "rebar_ax":"軸方向鉄筋",
+        "rebar_la":"側方向鉄筋",
+        "stirrup":"スターラップ",
+        "tys":"引張降伏強度",
+        "sys":"せん断降伏強度",
+        "ts":"引張強度",
+        "fck":"コンクリートの設計基準強度 fck(N/mm2)",
+        "max_ca":"粗骨材の最大寸法 (mm)",
+        "b_safe":"曲げ安全係数",
+        "s_safe":"せん断安全係数",
+        "t_safe":"ねじり安全係数",
+        "γi":"係数γi",
+        "ys":"降伏強度",
+        "d25":"D25以下",
+        "d29":"D29以上",
+        "dts":"設計引張強度"
     }
 }
