--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -32,6 +32,16 @@
         "sf_ms":"安全係数・材料強度",
         "calc_print":"計算・印刷"
     },
+    "blank-page":{
+        "cs_pc":"断面性能照査",
+        "program":"本プログラムは、鉄道構造物等設計標準・同解説",
+        "with2004":"コンクリート構造物―平成16年4月に準拠した、",
+        "cs":"断面の",
+        "bal_calc":"釣り合い計算",
+        "and":"および",
+        "stress_calc":"応力度の算定",
+        "in_program":"を行うプログラムです。"
+    },
     "basic-information":{
         "pick_bs":"ピックアップ (曲げ耐力用)",
         "pick_sv":"ピックアップ (せん断力照査用)",
@@ -99,7 +109,9 @@
         "rebar_ob":"主鉄筋の斜率",
         "rebar_fo":"折曲げ鉄筋",
         "angle":"角度",
-        "process":"処理"
+        "process":"処理",
+        "tp":"上端位置",
+        "tp_side":"上端位置\n/側かぶり"
     },
     "steels":{
         "m_no":"部材\n番号",
