--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,7 +49,36 @@
         "apply":"Apply",
         "spec":"Specification",
         "dc":"Design condition",
-        "sre_cross":"Stress used for cross-section inspection"
+        "sre_cross":"Stress used for cross-section inspection",
+        "rail":"Railway",
+        "japan_civil":"Japan Society of Civil Engineers",
+        "d_stress":"Durability For studying edge stress",
+        "pl_d":"Durability (permanent load)",
+        "safe_limit":"Safety (fatigue fracture) Fatigue limit",
+        "safe_pa":"Safety (fatigue destruction) Permanent action",
+        "safe_pv":"Safety (fatigue fracture) Permanent + variable",
+        "safe_d":"Safety (destruction)",
+        "r_ex":"Restorability (damage) Except during an earthquake",
+        "r_at":"Restorability (damage) At the time of an earthquake",
+        "min_rebar":"Minimum rebar amount",
+        "u_stress":"Use limit For studying edge stress",
+        "pl_u":"Usage limit (permanent load)",
+        "pl_f":"Fatigue limit permanent load",
+        "f_pv":"Fatigue limit permanent + fluctuation",
+        "ul":"Ultimate limit",
+        "us_earth":"Usage limit during an earthquake",
+        "ul_earth":"Ultimate limit during an earthquake",
+        "d_shear_judge":"Durability For shear crack examination judgment",
+        "vl_d":"Durability (variable load)",
+        "u_shear_judge":"Use limit For shear crack examination judgment",
+        "vl_u":"Usage limit (variable load)",
+        "d_torsion_judge":"Durability For examination and judgment of torsional cracks",
+        "jr_com":"JR companies",
+        "trans":"Transport Organization",
+        "jr_east":"JR East",
+        "limit100":"The upper limit of the cover used for the crack width limit is 100 mm.",
+        "apex":"Place one reinforcing bar at the apex in a circular cross section",
+        "Mud":"Mud when calculating βn in shear strength does not consider axial force"
     },
     "members" :{
         "section_sh":"Cross-sectional shape",
@@ -192,7 +221,18 @@
         "ys":"Yield strength",
         "d25":"D25 or less",
         "d29":"D29 and above",
-        "dts":"Design tensile strength"
+        "dts":"Design tensile strength",
+        "d_u":"Durability, usability",
+        "safe_ff":"Safety (fatigue fracture)",
+        "safe_d":"Safety (destruction)",
+        "r_ex":"Restorability (damage) Except during an earthquake",
+        "r_at":"Restorability (damage) At the time of an earthquake",
+        "min_rebar":"Minimum rebar amount",
+        "dont_use":"Do not use",
+        "muddy_less":"Muddy water specific density 1.04 or less",
+        "natural_less":"Natural muddy water, muddy water specific density 1.10 or less",
+        "bentonite":"Bentonite muddy water",
+        "aerial":"Aerial construction"
     },
     "calculation-print":{
         "dc":"Design condition",
