--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -49,7 +49,36 @@
         "apply":"適用",
         "spec":"仕様",
         "dc":"設計条件",
-        "sre_cross":"断面照査に用いる応力"
+        "sre_cross":"断面照査に用いる応力",
+        "rail":"鉄道",
+        "japan_civil":"土木学会",
+        "d_stress":"耐久性 縁応力度検討用",
+        "pl_d":"耐久性 （永久荷重）",
+        "safe_limit":"安全性 （疲労破壊）疲労限",
+        "safe_pa":"安全性 （疲労破壊）永久作用",
+        "safe_pv":"安全性 （疲労破壊）永久＋変動",
+        "safe_d":"安全性 （破壊）",
+        "r_ex":"復旧性 （損傷）地震時以外",
+        "r_at":"復旧性 （損傷）地震時",
+        "min_rebar":"最小鉄筋量",
+        "u_stress":"使用限界 縁応力度検討用",
+        "pl_u":"使用限界 （永久荷重）",
+        "pl_f":"疲労限界　永久荷重",
+        "f_pv":"疲労限界　永久＋変動",
+        "ul":"終局限界",
+        "us_earth":"地震時 使用限界",
+        "ul_earth":"地震時 終局限界",
+        "d_shear_judge":"耐久性 せん断ひび割れ検討判定用",
+        "vl_d":"耐久性 （変動荷重）",
+        "u_shear_judge":"使用限界 せん断ひび割れ検討判定用",
+        "vl_u":"使用限界 （変動荷重）",
+        "d_torsion_judge":"耐久性 ねじりひび割れ検討判定用",
+        "jr_com":"ＪＲ各社",
+        "trans":"運輸機構",
+        "jr_east":"ＪＲ東日本",
+        "limit100":"ひび割れ幅制限値に用いるかぶりは 100mm を上限とする",
+        "apex":"円形断面で鉄筋を頂点に１本配置する",
+        "Mud":"せん断耐力におけるβn算定時の Mud は軸力を考慮しない"        
     },
     "members" :{
         "section_sh":"断面形状",
@@ -192,7 +221,18 @@
         "ys":"降伏強度",
         "d25":"D25以下",
         "d29":"D29以上",
-        "dts":"設計引張強度"
+        "dts":"設計引張強度",
+        "d_u":"耐久性, 使用性",
+        "safe_ff":"安全性 （疲労破壊）",
+        "safe_d":"安全性 （破壊）",
+        "r_ex":"復旧性 （損傷）地震時以外",
+        "r_at":"復旧性 （損傷）地震時",
+        "min_rebar":"最小鉄筋量",
+        "dont_use":"使用しない",
+        "muddy_less":"泥水比重1.04以下",
+        "natural_less":"自然泥水, 泥水比重1.10以下",
+        "bentonite":"ベントナイト泥水",
+        "aerial":"気中施工"
     },
     "calculation-print":{
         "dc":"設計条件",
