section-force-list,result-viewer完了

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -245,5 +245,55 @@
         "member":"Member",
         "print":"Calculation printing",
         "p_login":"Please login"
+    },
+    "section-force-list":{
+        "m_no":"Member\nNo",
+        "calc_no":"Calculation number",
+        "point":"Calculation point",
+        "p_name":"Calculated point name",
+        "top":"Upper side",
+        "under":"Lower side",
+        "Top":"Upper side",
+        "Under":"Lower side",
+        "check_bend":"Checking the bending moment",
+        "d_s_stress":"Durability, usability For studying edge tensile stress",
+        "d_s_pa":"Durability, usability Permanent action",
+        "d_stress":"Durability for studying edge tensile stress",
+        "d_pa":"Durability Permanent action",
+        "u_stress":"Usability for studying edge tensile stress",
+        "u_pa":"Usability permanent action",
+        "safe_d":"Safety (destruction)",
+        "safe_max":"Safety (fatigue fracture) maximum stress",
+        "safe_min":"Safety (fatigue fracture) minimum stress",
+        "safe_var":"Safety (fatigue fracture) variable stress",
+        "r_ex":"Restorability Except during an earthquake",
+        "r_at":"Restorability At the time of an earthquake",
+        "check_shear":"Check against shear force",
+        "d_crack":"Durability for examining the need for crack inspection",
+        "d_fa":"Durability fluctuation action",
+        "check_torsion":"Checking against torsional moment",
+        "d_torsion":"Durability for examination of the need for torsional crack verification"
+    },
+    "result-viewer":{
+        "safe_d_bend":"Safety (destruction) bending",
+        "safe_d_shear":"Safety (destruction) shear",
+        "safe_d_torsion":"Safety (destruction) torsional moment",
+        "safe_f_bend":"Safety (fatigue fracture) bending",
+        "safe_f_shear":"Safety (fatigue fracture) shear",
+        "d_band":"Durability (bending crack)",
+        "d_shear":"Durability (shear crack)",
+        "d_torsion":"Durability (torsion crack)",
+        "u_crack":"Usability (appearance cracks)",
+        "r_d_bend":"Restorative (damage) bending",
+        "r_d_shear":"Restorative (damage) shear",
+        "r_d_torsion":"Restorability (damage) torsional moment",
+        "r_earth_bend":"Restorability (during an earthquake) bending",
+        "r_earth_shear":"Restorability (during an earthquake) shear",
+        "r_earth_torsion":"Restorability (during an earthquake) Torsion moment",
+        "check_min":"Checking the minimum amount of reinforcing bars",
+        "exam_max":"Examination of maximum rebar amount",
+        "summary":"Summary table",
+        "deduct_points":"points consumed. Today's usage is",
+        "daily_points":"points." 
     }
 }
