--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -245,5 +245,55 @@
         "member":"部材",
         "print":"計算印刷",
         "p_login":"ログインしてください。"
+    },
+    "section-force-list":{
+        "m_no":"部材\n番号",
+        "calc_no":"算出\n番号",
+        "point":"算出点",
+        "p_name":"算出点名",
+        "top":"上側",
+        "under":"下側",
+        "Top":"上　　 側",
+        "Under":"下　　 側",
+        "check_bend":"曲げモーメントの照査",
+        "d_s_stress":"耐久性、使用性　縁引張応力度検討用",
+        "d_s_pa":"耐久性、使用性　永久作用",
+        "d_stress":"耐久性　縁引張応力度検討用",
+        "d_pa":"耐久性　永久作用",
+        "u_stress":"使用性　縁引張応力度検討用",
+        "u_pa":"使用性　永久作用",
+        "safe_d":"安全性（破壊）",
+        "safe_max":"安全性（疲労破壊）最大応力",
+        "safe_min":"安全性（疲労破壊）最小応力",
+        "safe_var":"安全性（疲労破壊）変動応力",
+        "r_ex":"復旧性（地震時以外）",
+        "r_at":"復旧性（地震時）",
+        "check_shear":"せん断力に対する照査",
+        "d_crack":"耐久性　ひび割れ照査必要性の検討用",
+        "d_fa":"耐久性　変動作用",
+        "check_torsion":"ねじりモーメントに対する照査",
+        "d_torsion":"耐久性　ねじりひび割れ照査必要性の検討用"
+    },
+    "result-viewer":{
+        "safe_d_bend":"安全性（破壊）曲げ",
+        "safe_d_shear":"安全性（破壊）せん断",
+        "safe_d_torsion":"安全性（破壊）ねじりモーメント",
+        "safe_f_bend":"安全性（疲労破壊）曲げ",
+        "safe_f_shear":"安全性（疲労破壊）せん断",
+        "d_band":"耐久性（曲げひび割れ）",
+        "d_shear":"耐久性（せん断ひび割れ）",
+        "d_torsion":"耐久性（ねじりひび割れ）",
+        "u_crack":"使用性（外観ひび割れ）",
+        "r_d_bend":"復旧性（損傷）曲げ",
+        "r_d_shear":"復旧性（損傷）せん断",
+        "r_d_torsion":"復旧性（損傷）ねじりモーメント",
+        "r_earth_bend":"復旧性（地震時）曲げ",
+        "r_earth_shear":"復旧性（地震時）せん断",
+        "r_earth_torsion":"復旧性（地震時）ねじりモーメント",
+        "check_min":"最小鉄筋量の照査",
+        "exam_max":"最大鉄筋量の検討",
+        "summary":"総括表",
+        "deduct_points":"ポイント消費しました。本日の使用量は、",
+        "daily_points":"です。" 
     }
 }
