result-summary-table(統括表)一部翻訳保留

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -295,5 +295,70 @@
         "summary":"Summary table",
         "deduct_points":"points consumed. Today's usage is",
         "daily_points":"points." 
+    },
+    "result-summary-table":{
+        "unit":"Unit",
+        "section_pos":"Cross section position",
+        "section_shape":"Cross-sectional shape",
+        "steel_info":"Steel information",
+        "I_steel":"I placement steel frame",
+        "t_flange":"Tension flange",
+        "sternum":"Sternum",
+        "c_flange":"Compressed flange",
+        "H_steel":"H placement steel frame",
+        "flange":"Flange",
+        "thk":"Thickness",
+        "rb_amount":"Reinforcing bar amount",
+        "main":"Main rebar",
+        "dia_no":"Diameter / number",
+        "lateral":"Lateral rebar",
+        "fold":"Folded rebar",
+        "dia_no_pitch_angle":"Diameter / number \n Pitch / angle",
+        "stirrup":"Stirrup",
+        "dia_pitch":"Diameter / pitch",
+        "destruct":"Destruction",
+        "struct_coef":"Structure coefficient",
+        "bend":"Bending",
+        "dsgn_bend_moment":"Design bending moment",
+        "dsgn_axial":"Design axial force",
+        "dsgn_bend_str":"Design bending strength",
+        "shear":"Shear",
+        "dsgn_shear":"Design shear force",
+        "dsgn_shear_str":"Design shear strength",
+        "dsgn_dia_comp":"Design diagonal compression fracture resistance",
+        "twist":"Twist",
+        "dsgn_torsion":"Design torsion moment",
+        "use_d":"Usability / durability",
+        "con_edge_stress":"Concrete edge tensile stress",
+        "dsgn_ten_str":"/ Design tensile strength",
+        "bend_comp_stress":"Bending compressive stress of concrete",
+        "pl":"Permanent load",
+        "rb_ten_stress":"Reinforcing bar tensile stress",
+        "safe":"Safety",
+        "safe_cw":"Safety crack width",
+        "ae_cw":"Appearance crack width",
+        "shear_without":"Shear strength without using reinforced steel",
+        "torsion_without":"Torsion strength without using reinforced steel",
+        "ff":"Fatigue fracture",
+        "str_coef":"Structure coefficient",
+        "member_coef":"Member coefficient",
+        "rb_dsgn_min":"Reinforcing bar design minimum stress",
+        "rb_dsgn_flu":"Reinforcing bar design fluctuation stress degree",
+        "rb_dsgn_fs":"Reinforcing bar design fatigue strength",
+        "r_always":"Restorability (always)",
+        "yield_bend_str":"Yield bending strength",
+        "r_earth":"Restorability (at the time of an earthquake)",
+        "check_rb":"Checking the amount of reinforcing bars",
+        "min":"Minimum",
+        "max_ca":"Maximum dimensions of coarse aggregate",
+        "bend_cr":"Bending crack resistance",
+        "bend_yield":"Bending yield strength",
+        "judge":"Judgement",
+        "max":"Maximum",
+        "balance_rr":"Balanced rebar ratio",
+        "75_balance_rr":"75% of balanced rebar ratio",
+        "rbb":"Reinforcing bar ratio",
+        "decision":"Decision case",
+        "copy":"Copied to clipboard!"
     }
 }
