--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -295,5 +295,70 @@
         "summary":"総括表",
         "deduct_points":"ポイント消費しました。本日の使用量は、",
         "daily_points":"です。" 
+    },
+    "result-summary-table":{
+        "unit":"単位",
+        "section_pos":"断面位置",
+        "section_shape":"断面形状",
+        "steel_info":"鉄骨情報",
+        "I_steel":"I配置鉄骨",
+        "t_flange":"引張ﾌﾗﾝｼﾞ",
+        "sternum":"腹板",
+        "c_flange":"圧縮ﾌﾗﾝｼﾞ",
+        "H_steel":"H配置鉄骨",
+        "flange":"ﾌﾗﾝｼﾞ",
+        "thk":"厚さ",
+        "rb_amount":"鉄筋量",
+        "main":"主鉄筋",
+        "dia_no":"径・本数",
+        "lateral":"側方向鉄筋",
+        "fold":"折り曲げ鉄筋",
+        "dia_no_pitch_angle":"径・本数\nピッチ・角度",
+        "stirrup":"スターラップ",
+        "dia_pitch":"径・ピッチ",
+        "destruct":"破壊",
+        "struct_coef":"構造物係数",
+        "bend":"曲げ",
+        "dsgn_bend_moment":"設計曲げモーメント",
+        "dsgn_axial":"設計軸方向力",
+        "dsgn_bend_str":"設計曲げ耐力",
+        "shear":"せん断",
+        "dsgn_shear":"設計せん断力",
+        "dsgn_shear_str":"設計せん断耐力",
+        "dsgn_dia_comp":"設計斜め圧縮破壊耐力",
+        "twist":"ねじり",
+        "dsgn_torsion":"設計ねじりモーメント",
+        "use_d":"使用性・耐久性",
+        "con_edge_stress":"コンクリートの縁引張応力度",
+        "dsgn_ten_str":"／設計引張強度",
+        "bend_comp_stress":"コンクリートの曲げ圧縮応力度",
+        "pl":"永久荷重",
+        "rb_ten_stress":"鉄筋引張応力度",
+        "safe":"安　全　度",
+        "safe_cw":"安全性ひび割れ幅",
+        "ae_cw":"外観ひび割れ幅",
+        "shear_without":"補強鋼材を用いないせん断耐力",
+        "torsion_without":"補強鋼材を用いないねじり耐力",
+        "ff":"疲労破壊",
+        "str_coef":"構造物係数",
+        "member_coef":"部材係数",
+        "rb_dsgn_min":"鉄筋設計最小応力度",
+        "rb_dsgn_flu":"鉄筋設計変動応力度",
+        "rb_dsgn_fs":"鉄筋設計疲労強度",
+        "r_always":"復旧性（常時）",
+        "yield_bend_str":"降伏曲げ耐力",
+        "r_earth":"復旧性（地震時）",
+        "check_rb":"鉄筋量の照査",
+        "min":"最小",
+        "max_ca":"粗骨材の最大寸法",
+        "bend_cr":"曲げひび割れ耐力",
+        "bend_yield":"曲げ降伏耐力",
+        "judge":"判定",
+        "max":"最大",
+        "balance_rr":"釣合鉄筋比",
+        "75_balance_rr":"釣合鉄筋比の75%",
+        "rbb":"鉄筋比",
+        "decision":"決定ケース",
+        "copy":"クリップボードにコピーしました!"
     }
 }
