--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -275,6 +275,7 @@
         "d_torsion":"耐久性　ねじりひび割れ照査必要性の検討用"
     },
     "result-viewer":{
+        "section_list":"断面力一覧表",
         "safe_d_bend":"安全性（破壊）曲げ",
         "safe_d_shear":"安全性（破壊）せん断",
         "safe_d_torsion":"安全性（破壊）ねじりモーメント",
@@ -360,5 +361,35 @@
         "rbb":"鉄筋比",
         "decision":"決定ケース",
         "copy":"クリップボードにコピーしました!"
+    },
+    "calculation":{
+        "sono":"(その",
+        "g_name":"部材名称",
+        "position":"位置",
+        "section_no":"断面番号",
+        "rb_ten":"引張鉄筋",
+        "rb_com":"圧縮鉄筋",
+        "rb_la":"側方鉄筋",
+        "judge":"判定",
+        "I_steel":"I配置\n鉄骨",
+        "t_flange":"引張ﾌﾗﾝｼﾞ",
+        "sternum":"腹板",
+        "c_flange":"圧縮ﾌﾗﾝｼﾞ",
+        "H_steel":"H配置\n鉄骨",
+        "flange":"ﾌﾗﾝｼﾞ",
+        "vrfy_rslt":"照査結果",
+        "thk":"厚さ",
+        "stirrup":"スターラップ",
+        "rb_corr":"鉄筋補正　αr",
+        "time":"(回)",
+        "rb_r1":"鉄筋加工補正 r1",
+        "rb_r2":"鉄筋加工補正 r2",
+        "Ase":"側方鉄筋 Ase",
+        "env":"環境条件",
+        "typ_steel":"鋼材の種類",
+        "fit_typ":"継手種類",
+        "str_grade":"強度等級",
+        "sh_span":"せん断スパン(mm)",
+        "sh_span_ratio":"せん断スパン比"
     }
 }
