--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -51,6 +51,7 @@
         "dc":"設計条件",
         "sre_cross":"断面照査に用いる応力",
         "rail":"鉄道",
+        "Pilipinas": "フィリピン鉄道",
         "japan_civil":"土木学会",
         "d_stress":"耐久性 縁応力度検討用",
         "pl_d":"耐久性 （永久荷重）",
