仕様に令和５年を追加

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,7 +75,9 @@
         "vl_u":"Usage limit (variable load)",
         "d_torsion_judge":"Durability For examination and judgment of torsional cracks",
         "jr_com":"JR companies",
+        "jr_com5":"JR companies from 2023",
         "trans":"Transport Organization",
+        "trans5":"Transport Organization from 2023",
         "jr_east":"JR East",
         "limit100":"The upper limit of the cover used for the crack width limit is 100 mm.",
         "apex":"Place one reinforcing bar at the apex in a circular cross section",
