--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -75,7 +75,9 @@
         "vl_u":"使用限界 （変動荷重）",
         "d_torsion_judge":"耐久性 ねじりひび割れ検討判定用",
         "jr_com":"ＪＲ各社",
+        "jr_com5":"ＪＲ各社 令和5年設計標準",
         "trans":"運輸機構",
+        "trans5":"運輸機構 令和5年設計標準",
         "jr_east":"ＪＲ東日本",
         "limit100":"ひび割れ幅制限値に用いるかぶりは 100mm を上限とする",
         "apex":"円形断面で鉄筋を頂点に１本配置する",
