両端固定梁以外の計算式を修正した

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -36,7 +36,7 @@
     "blank-page":{
         "cs_pc":"Cross-section performance check",
         "program":"This program is a design standard for railway structures, etc.",
-        "with2004":"Concrete structure-Compliant with April 2004,",
+        "with2004":"Concrete structure-Compliant",
         "cs":"Cross-section ",
         "bal_calc":"balance calculation",
         "and":"and",
