--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -36,7 +36,7 @@
     "blank-page":{
         "cs_pc":"断面性能照査",
         "program":"本プログラムは、鉄道構造物等設計標準・同解説",
-        "with2004":"コンクリート構造物―平成16年4月に準拠した、",
+        "with2004":"コンクリート構造物に準拠した、",
         "cs":"断面の",
         "bal_calc":"釣り合い計算",
         "and":"および",
