--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -259,6 +259,7 @@
         "member":"Member",
         "print":"Calculation printing",
         "preparing":"Printing...",
+        "download":"Summary download",
         "downloading": "Downloading",
         "p_login":"Please login"
     },
