--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -252,6 +252,7 @@
         "dc":"設計条件",
         "s_table":"断面力の集計表",
         "p_check":"性能照査",
+        "safety_ratio":"安全率",
         "check":"照査",
         "bend":"曲げ",
         "shear":"せん断",
