- Add option "Axis max/min"

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -254,6 +254,8 @@
         "p_check":"Performance check",
         "safety_ratio":"Safety ratio list",
         "check":"Check",
+        "axis_maxmin":"Axis force max/min",
+        "consider":"consider",
         "bend":"Bending",
         "shear":"Shear",
         "twist":"Twist",
